# humanoid_collab

./: .gitignore  MUJOCO_LOG.TXT  README.md  pyproject.toml
humanoid_collab/: __init__.py  constants.py  env.py  mjcf_builder.py  mjx_env.py  vector_env.py
humanoid_collab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
humanoid_collab/amp/: __init__.py  amp_config.py  amp_obs.py  amp_reward.py  discriminator.py  motion_buffer.py  motion_data.py  retarget.py
humanoid_collab/partners/: __init__.py  scripted.py
humanoid_collab/tasks/: __init__.py  base.py  box_lift.py  handshake.py  hug.py  registry.py  walk_to_target.py
humanoid_collab/utils/: __init__.py  contacts.py  exp_logging.py  ids.py  kinematics.py  obs.py
humanoid_collab/vision/: __init__.py  vae.py
scripts/: benchmark_backends.py  download_amass.py  pretrain_vision_vae.py  process_amass.py  render_ddpg_amp_walk_to_target.py  render_demo.py  render_ippo.py  render_maddpg.py  render_sac.py  render_sac_amp_walk_to_target.py  rollout_random.py  train_amp_hug.py  train_amp_pretrain.py  train_ddpg_amp_walk_to_target.py  train_ippo.py  train_maddpg.py  train_maddpg_handshake.sh  train_masac.py  train_sac.py  train_sac_amp_walk_to_target.py
tests/: test_amp_retarget_order.py  test_contact_logic.py  test_control_modes.py  test_env_api.py  test_mjx_env.py  test_obs_shapes.py  test_rgb_obs.py  test_tasks.py  test_vector_env.py
